Luckily my screens at work is in 4k. So, I saw that the logo on the top was cut off and fixed the height.

--- a/source/layouts/components/Menu/branding/Menu.branding.scss
+++ b/source/layouts/components/Menu/branding/Menu.branding.scss
@@ -6,8 +6,10 @@
   li {
     display: flex;
     align-items: center;
+    justify-content: center;
     grid-area: 1 / 3 / 2 / 4; //--|🠈 row-start / col-start / row-end / col-end 🠈|--//
     img {
+      height: 3rem;
       filter: drop-shadow(0 0 4px rgba(white, 0.75));
     }
   }
